pycsdr (0.18.33) bullseye jammy; urgency=low

  * Simplified NoiseFilter algorithm.
  * Improved SNR computation.

 -- Marat Fayzullin <luarvique@gmail.com>  Thu, 26 Jun 2025 16:12:00 +0000

pycsdr (0.18.32) bullseye jammy; urgency=low

  * Added SNR computation using FFT.
  * Added SNR-based "smart squelch".

 -- Marat Fayzullin <luarvique@gmail.com>  Thu, 12 Jun 2025 16:12:00 +0000

pycsdr (0.18.31) bullseye jammy; urgency=low

  * Added LAGGY and MID AGC options.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 20 May 2025 16:12:00 +0000

pycsdr (0.18.30) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Improved Power and Squelch modules.
  * Added configurable processed chunk length.
  * Added configurable hang and flush lengths.
  * Now supporting non-complex Squelch input.
  * Now supporting float Exec input.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 6 May 2025 16:12:00 +0000

pycsdr (0.18.29) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Added end-of-page marke to fax pages.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 8 Apr 2025 16:12:00 +0000

pycsdr (0.18.28) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Added configurable fax page limit.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 14 Mar 2025 16:12:00 +0000

pycsdr (0.18.27) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Refactored SSTV decoder code.
  * Eliminated FFTW3 race condition in SSTV decoder.
  * Disabled AVT-90 SSTV mode due to quality concerns.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 20 Jan 2025 16:12:00 +0000

pycsdr (0.18.26) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Fixed pixel window in PD120 and other modes.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 14 Oct 2024 16:12:00 +0000

pycsdr (0.18.25) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.