@@ -12,6 +12,7 @@ struct NoiseFilter: Module {
     int threshold = 0;
     uint32_t wndSize = 32;
     uint32_t fftSize = 4096;
+    uint32_t latency = 5;
 };
 
 extern PyType_Spec NoiseFilterSpec;
