@@ -1,6 +1,7 @@
 pycsdr (0.18.33) bullseye jammy; urgency=low
 
   * Simplified NoiseFilter algorithm.
+  * Made NoiseFilter latency configurable.
   * Improved SNR computation.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Thu, 26 Jun 2025 16:12:00 +0000
